Darkness: rauvin sea caves, layer 5
refs #337

--- a/mod/area/darkness003.git.yml
+++ b/mod/area/darkness003.git.yml
@@ -517,7 +517,7 @@ Encounter List:
         __struct_id: 1
         X: {type: :float, value: 0.0}
         Y: {type: :float, value: 0.0}
-        Z: {type: :float, value: 0.0311}
+        Z: {type: :float, value: -0.1413}
       - !nwn-lib.elv.es,2008-12/struct 
         __struct_id: 1
         X: {type: :float, value: 6.9568}
@@ -527,12 +527,12 @@ Encounter List:
         __struct_id: 1
         X: {type: :float, value: 6.3389}
         Y: {type: :float, value: 3.6721}
-        Z: {type: :float, value: 0.272}
+        Z: {type: :float, value: 0.025}
       - !nwn-lib.elv.es,2008-12/struct 
         __struct_id: 1
         X: {type: :float, value: 0.0445}
         Y: {type: :float, value: 3.3459}
-        Z: {type: :float, value: 0.025}
+        Z: {type: :float, value: 0.266}
     LocalizedName: 
       type: :cexolocstr
       str_ref: 14493
@@ -561,8 +561,8 @@ Encounter List:
         Z: {type: :float, value: 0.0}
     Tag: {type: :cexostr, value: NW_INCORPORGRP}
     TemplateResRef: {type: :resref, value: nw_incorporgrp}
-    XPosition: {type: :float, value: 73.3881}
-    YPosition: {type: :float, value: 83.9932}
+    XPosition: {type: :float, value: 76.8341}
+    YPosition: {type: :float, value: 77.7326}
     ZPosition: {type: :float, value: 0.2213}
 List: 
   type: :list
@@ -617,9 +617,139 @@ StoreList:
 
 TriggerList: 
   type: :list
-  value: []
+  value: 
+  - !nwn-lib.elv.es,2008-12/struct 
+    __struct_id: 1
+    AutoRemoveKey: {type: :byte, value: 0}
+    Cursor: {type: :byte, value: 1}
+    DisarmDC: {type: :byte, value: 0}
+    Faction: {type: :dword, value: 1}
+    Geometry: 
+      type: :list
+      value: 
+      - !nwn-lib.elv.es,2008-12/struct 
+        __struct_id: 3
+        PointX: {type: :float, value: -0.586128234863281}
+        PointY: {type: :float, value: -1.25942993164062}
+        PointZ: {type: :float, value: 0.025000000372529}
+      - !nwn-lib.elv.es,2008-12/struct 
+        __struct_id: 3
+        PointX: {type: :float, value: 0.643287658691406}
+        PointY: {type: :float, value: -5.11395263671875}
+        PointZ: {type: :float, value: 0.025000000372529}
+      - !nwn-lib.elv.es,2008-12/struct 
+        __struct_id: 3
+        PointX: {type: :float, value: 2.88983154296875}
+        PointY: {type: :float, value: -5.87245178222656}
+        PointZ: {type: :float, value: 0.025000000372529}
+      - !nwn-lib.elv.es,2008-12/struct 
+        __struct_id: 3
+        PointX: {type: :float, value: 7.46448516845703}
+        PointY: {type: :float, value: -3.97874450683594}
+        PointZ: {type: :float, value: 0.0249999407678843}
+      - !nwn-lib.elv.es,2008-12/struct 
+        __struct_id: 3
+        PointX: {type: :float, value: 7.98738861083984}
+        PointY: {type: :float, value: -1.84882354736328}
+        PointZ: {type: :float, value: 0.025000000372529}
+      - !nwn-lib.elv.es,2008-12/struct 
+        __struct_id: 3
+        PointX: {type: :float, value: 7.46688079833984}
+        PointY: {type: :float, value: 0.750556945800781}
+        PointZ: {type: :float, value: 0.025000000372529}
+      - !nwn-lib.elv.es,2008-12/struct 
+        __struct_id: 3
+        PointX: {type: :float, value: 5.26811218261719}
+        PointY: {type: :float, value: 1.76949310302734}
+        PointZ: {type: :float, value: 0.025000000372529}
+      - !nwn-lib.elv.es,2008-12/struct 
+        __struct_id: 3
+        PointX: {type: :float, value: 3.93552398681641}
+        PointY: {type: :float, value: 0.323905944824219}
+        PointZ: {type: :float, value: 0.0250000599771738}
+      - !nwn-lib.elv.es,2008-12/struct 
+        __struct_id: 3
+        PointX: {type: :float, value: 5.83960723876953}
+        PointY: {type: :float, value: -0.716903686523438}
+        PointZ: {type: :float, value: 0.0250000599771738}
+      - !nwn-lib.elv.es,2008-12/struct 
+        __struct_id: 3
+        PointX: {type: :float, value: 6.40911102294922}
+        PointY: {type: :float, value: -2.95132446289062}
+        PointZ: {type: :float, value: 0.025000000372529}
+      - !nwn-lib.elv.es,2008-12/struct 
+        __struct_id: 3
+        PointX: {type: :float, value: 3.84965515136719}
+        PointY: {type: :float, value: -4.11819458007812}
+        PointZ: {type: :float, value: 0.0250000599771738}
+      - !nwn-lib.elv.es,2008-12/struct 
+        __struct_id: 3
+        PointX: {type: :float, value: 1.61470794677734}
+        PointY: {type: :float, value: -3.71056365966797}
+        PointZ: {type: :float, value: 0.025000000372529}
+      - !nwn-lib.elv.es,2008-12/struct 
+        __struct_id: 3
+        PointX: {type: :float, value: 0.0}
+        PointY: {type: :float, value: 0.0}
+        PointZ: {type: :float, value: 0.0249999407678843}
+    HighlightHeight: {type: :float, value: 0.0}
+    KeyName: {type: :cexostr, value: ""}
+    LinkedTo: {type: :cexostr, value: WP_darkness004_2_darkness003}
+    LinkedToFlags: {type: :byte, value: 2}
+    LoadScreenID: {type: :word, value: 0}
+    LocalizedName: 
+      type: :cexolocstr
+      str_ref: 14760
+      value: {}
 
+    OnClick: {type: :resref, value: ""}
+    OnDisarm: {type: :resref, value: ""}
+    OnTrapTriggered: {type: :resref, value: ""}
+    PortraitId: {type: :word, value: 0}
+    ScriptHeartbeat: {type: :resref, value: ""}
+    ScriptOnEnter: {type: :resref, value: ""}
+    ScriptOnExit: {type: :resref, value: ""}
+    ScriptUserDefine: {type: :resref, value: ""}
+    Tag: {type: :cexostr, value: darkness003_2_darkness004}
+    TemplateResRef: {type: :resref, value: newtransition}
+    TrapDetectDC: {type: :byte, value: 0}
+    TrapDetectable: {type: :byte, value: 1}
+    TrapDisarmable: {type: :byte, value: 1}
+    TrapFlag: {type: :byte, value: 0}
+    TrapOneShot: {type: :byte, value: 1}
+    TrapType: {type: :byte, value: 0}
+    Type: {type: :int, value: 1}
+    XOrientation: {type: :float, value: 0.0}
+    XPosition: {type: :float, value: 81.2278}
+    YOrientation: {type: :float, value: 0.0}
+    YPosition: {type: :float, value: 76.8721}
+    ZOrientation: {type: :float, value: 0.0}
+    ZPosition: {type: :float, value: 0.0}
 WaypointList: 
   type: :list
-  value: []
+  value: 
+  - !nwn-lib.elv.es,2008-12/struct 
+    __struct_id: 5
+    Appearance: {type: :byte, value: 1}
+    Description: 
+      type: :cexolocstr
+      value: {}
 
+    HasMapNote: {type: :byte, value: 0}
+    LinkedTo: {type: :cexostr, value: ""}
+    LocalizedName: 
+      type: :cexolocstr
+      value: {}
+
+    MapNote: 
+      type: :cexolocstr
+      value: {}
+
+    MapNoteEnabled: {type: :byte, value: 0}
+    Tag: {type: :cexostr, value: WP_darkness003_2_darkness004}
+    TemplateResRef: {type: :resref, value: ""}
+    XOrientation: {type: :float, value: -0.7071}
+    XPosition: {type: :float, value: 81.3288}
+    YOrientation: {type: :float, value: 0.7071}
+    YPosition: {type: :float, value: 79.0217}
+    ZPosition: {type: :float, value: -0.0}
