Darkness: 005 add some sounds
refs #337

--- a/mod/area/darkness005.git.yml
+++ b/mod/area/darkness005.git.yml
@@ -829,8 +829,124 @@ Placeable List:
     Z: {type: :float, value: 0.2}
 SoundList: 
   type: :list
-  value: []
+  value: 
+  - !nwn-lib.elv.es,2008-12/struct 
+    __struct_id: 6
+    Active: {type: :byte, value: 1}
+    Continuous: {type: :byte, value: 0}
+    Elevation: {type: :float, value: 1.5}
+    GeneratedType: {type: :dword, value: 0}
+    Hours: {type: :dword, value: 0}
+    Interval: {type: :dword, value: 0}
+    IntervalVrtn: {type: :dword, value: 0}
+    LocName: 
+      type: :cexolocstr
+      str_ref: 67856
+      value: {}
 
+    Looping: {type: :byte, value: 1}
+    MaxDistance: {type: :float, value: 10.0}
+    MinDistance: {type: :float, value: 1.0}
+    PitchVariation: {type: :float, value: 0.0}
+    Positional: {type: :byte, value: 1}
+    Priority: {type: :byte, value: 3}
+    Random: {type: :byte, value: 0}
+    RandomPosition: {type: :byte, value: 0}
+    RandomRangeX: {type: :float, value: 0.0}
+    RandomRangeY: {type: :float, value: 0.0}
+    Sounds: 
+      type: :list
+      value: 
+      - !nwn-lib.elv.es,2008-12/struct {__struct_id: 0, Sound: {type: :resref, value: al_cv_fireplace1}}
+    Tag: {type: :cexostr, value: Fireplace}
+    TemplateResRef: {type: :resref, value: fireplace}
+    Times: {type: :byte, value: 3}
+    Volume: {type: :byte, value: 127}
+    VolumeVrtn: {type: :byte, value: 0}
+    XPosition: {type: :float, value: 92.4588}
+    YPosition: {type: :float, value: 15.0734}
+    ZPosition: {type: :float, value: 1.7}
+  - !nwn-lib.elv.es,2008-12/struct 
+    __struct_id: 6
+    Active: {type: :byte, value: 1}
+    Continuous: {type: :byte, value: 1}
+    Elevation: {type: :float, value: 1.0}
+    GeneratedType: {type: :dword, value: 0}
+    Hours: {type: :dword, value: 0}
+    Interval: {type: :dword, value: 10000}
+    IntervalVrtn: {type: :dword, value: 5000}
+    LocName: 
+      type: :cexolocstr
+      str_ref: 91310
+      value: {}
+
+    Looping: {type: :byte, value: 0}
+    MaxDistance: {type: :float, value: 10.0}
+    MinDistance: {type: :float, value: 1.0}
+    PitchVariation: {type: :float, value: 0.300000011920929}
+    Positional: {type: :byte, value: 0}
+    Priority: {type: :byte, value: 19}
+    Random: {type: :byte, value: 1}
+    RandomPosition: {type: :byte, value: 0}
+    RandomRangeX: {type: :float, value: 0.0}
+    RandomRangeY: {type: :float, value: 0.0}
+    Sounds: 
+      type: :list
+      value: 
+      - !nwn-lib.elv.es,2008-12/struct {__struct_id: 0, Sound: {type: :resref, value: as_hr_x2ghost1}}
+      - !nwn-lib.elv.es,2008-12/struct {__struct_id: 0, Sound: {type: :resref, value: as_hr_x2ghost10}}
+      - !nwn-lib.elv.es,2008-12/struct {__struct_id: 0, Sound: {type: :resref, value: as_hr_x2ghost2}}
+      - !nwn-lib.elv.es,2008-12/struct {__struct_id: 0, Sound: {type: :resref, value: as_hr_x2ghost3}}
+      - !nwn-lib.elv.es,2008-12/struct {__struct_id: 0, Sound: {type: :resref, value: as_hr_x2ghost4}}
+      - !nwn-lib.elv.es,2008-12/struct {__struct_id: 0, Sound: {type: :resref, value: as_hr_x2ghost5}}
+      - !nwn-lib.elv.es,2008-12/struct {__struct_id: 0, Sound: {type: :resref, value: as_hr_x2ghost6}}
+      - !nwn-lib.elv.es,2008-12/struct {__struct_id: 0, Sound: {type: :resref, value: as_hr_x2ghost7}}
+      - !nwn-lib.elv.es,2008-12/struct {__struct_id: 0, Sound: {type: :resref, value: as_hr_x2ghost8}}
+      - !nwn-lib.elv.es,2008-12/struct {__struct_id: 0, Sound: {type: :resref, value: as_hr_x2ghost9}}
+    Tag: {type: :cexostr, value: Ghosts}
+    TemplateResRef: {type: :resref, value: ghosts}
+    Times: {type: :byte, value: 3}
+    Volume: {type: :byte, value: 127}
+    VolumeVrtn: {type: :byte, value: 0}
+    XPosition: {type: :float, value: 84.4737}
+    YPosition: {type: :float, value: 55.7121}
+    ZPosition: {type: :float, value: 1.0}
+  - !nwn-lib.elv.es,2008-12/struct 
+    __struct_id: 6
+    Active: {type: :byte, value: 1}
+    Continuous: {type: :byte, value: 0}
+    Elevation: {type: :float, value: 1.5}
+    GeneratedType: {type: :dword, value: 0}
+    Hours: {type: :dword, value: 0}
+    Interval: {type: :dword, value: 0}
+    IntervalVrtn: {type: :dword, value: 0}
+    LocName: 
+      type: :cexolocstr
+      str_ref: 67903
+      value: {}
+
+    Looping: {type: :byte, value: 1}
+    MaxDistance: {type: :float, value: 10.0}
+    MinDistance: {type: :float, value: 1.0}
+    PitchVariation: {type: :float, value: 0.0}
+    Positional: {type: :byte, value: 0}
+    Priority: {type: :byte, value: 2}
+    Random: {type: :byte, value: 0}
+    RandomPosition: {type: :byte, value: 0}
+    RandomRangeX: {type: :float, value: 0.0}
+    RandomRangeY: {type: :float, value: 0.0}
+    Sounds: 
+      type: :list
+      value: 
+      - !nwn-lib.elv.es,2008-12/struct {__struct_id: 0, Sound: {type: :resref, value: al_mg_portal2}}
+    Tag: {type: :cexostr, value: MagicPortalWater}
+    TemplateResRef: {type: :resref, value: magicportalwater}
+    Times: {type: :byte, value: 3}
+    Volume: {type: :byte, value: 127}
+    VolumeVrtn: {type: :byte, value: 0}
+    XPosition: {type: :float, value: 81.4451}
+    YPosition: {type: :float, value: 55.1352}
+    ZPosition: {type: :float, value: 1.5}
 StoreList: 
   type: :list
   value: []
